<resources>
    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="app_name">Period Tracker</string>
    <string name="author">com.hungdt.periodtracked</string>
    <string name="today">Today</string>
    <string name="report">Report</string>
    <string name="insights">Insights</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Policy</string>
    <string name="setting">Setting</string>
    <string name="vip">VIP</string>
    <string name="when_did_your_last_period_start">When did your last period start?</string>
    <string name="not_sure">Not Sure</string>
    <string name="next">Next</string>
    <string name="what_s_your_typical_period_length">What\'s your typical period length?</string>
    <string name="your_circle_length">Your circle length?</string>
    <string name="day_28">The app will set the length of the cycle to 28 days, the more you use it regularly, the more accurate it will be.</string>
    <string name="day_5">The app will set your menstrual period to 5 days, the more you use it regularly, the more accurate it will be.</string>
    <string name="begin">To be able to predict your period, enter when your last period began.</string>
    <string name="month">Month&#160;</string>
    <string name="title1"><b>What Can Cause Late Periods And Irregular Cycles</b></string>
    <string name="body1">Your menstrual cycle is counted from the first day of your last period to the start of your next period. Your period is considered irregular if it\'s longer than 38 days or if the duration varies.\n
        \nThe absence of menstruation doesn\'t necessarily indicate pregnancy. Other explanations for late periods and irregular cycles can be divided into three categories:\n
        \n<b>Physiological:</b> Stress, sudden weight changes (especially a weight loss of 10 to 15 percent or more), strenuous exercise, frequent climate or time zone changes, breastfeeding, etc.\n
        \n<b>Medical:</b> Taking or discontinuing medications, including hormonal contraceptives, certain antihistamines, or antidepressants.\n
        \n<b>Pathological:</b> Polycystic ovaries, uterine disorders or anomalies, or endocrine system disorders. etc.\n
        \nIf your periods are at least 10–14 days late, it\'s best to consult a doctor. However, if you had unprotected vaginal intercourse during your last cycle, you may want to take a pregnancy test first.</string>
    <string name="title2"><b>What Water Temperature Quenches Thirst Best?</b></string>
    <string name="body2">Not drinking enough water during intense workouts or hot weather may lead to dehydration, which is accompanied by thirst. Dehydration partially suppresses sweating. This disrupts thermoregulation and, as a result, the body\'s temperature begins to rise.\n
        \nResearch has shown that the temperature of water you drink influences the sweating response. Having a cold drink causes the body temperature to drop and minimizes sweating. That\'s why cool water (61 °F/1 6°C) can improve hydration better than colder water.\n
        \nImportant note: if you have a gastrointestinal condition, drinking room temperature water is recommended.</string>
    <string name="title3"><b>5 Signs Your Period Is About To Start</b></string>
    <string name="body3"><b>&#160;&#160;&#160;&#160;&#160;&#160;1. Mood swings</b>\n
        \nThe emotional symptoms can be more severe than the physical ones for some people. You may experience:\n\n
        <i>&#160;&#160;&#160;&#160;&#160;&#160;- Mood swings</i>\n
        <i>&#160;&#160;&#160;&#160;&#160;&#160;- Depression</i>\n
        <i>&#160;&#160;&#160;&#160;&#160;&#160;- Irritability</i>\n
        <i>&#160;&#160;&#160;&#160;&#160;&#160;- Anxiety</i>\n
        \nIf you feel like you’re on an emotional roller coaster or feel sadder or crankier than usual, fluctuating estrogen and progesterone levels may be to blame.\n
        \nEstrogen can affect production of serotonin and feel-good endorphins in the brain, decreasing feelings of well-being and increasing depression and irritability.\n
        \nFor some, progesterone may have a calming effect. When progesterone levels are low, this effect may be diminished. Periods of crying for no reason and emotional hypersensitivity can result.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;2. Headache</b>\n
        \nSince hormones are responsible for generating the pain response, it’s understandable that fluctuating hormonal levels might cause headaches and migraines to occur.\n
        \nSerotonin is a neurotransmitter that often sets off migraines and headaches. Estrogen may increase serotonin levels and the number of serotonin receptors in the brain at certain points during the menstrual cycle. The interplay between estrogen and serotonin may cause migraines to occur in those who are prone to them.\n
        \nMore than 50 percent of women who get migraines report an association between the occurrence of migraines and their period. Migraines might occur before, during, or immediately following menstruation.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;3. Fatigue</b>\n
        \nAs your period approaches, your body shifts gears from getting ready to sustain a pregnancy to getting ready to menstruate. Hormonal levels plummet, and fatigue is often the result. Changes in mood may also make you feel tired.\n
        \nOn top of all that, some women have trouble sleeping during this part of their menstrual cycle. Lack of sleep can exacerbate daytime fatigue.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;4. Lower back pain</b>\n
        \nThe uterine and abdominal contractions triggered by the release of prostaglandins may also cause muscle contractions to occur in the lower back.\n
        \nAn aching or pulling feeling may result. Some may have significant lower back pain during their period. Others experience mild discomfort or a nagging feeling in their back.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;5. Trouble sleeping</b>\n
        \nAbnormal symptoms can all affect your sleep making it harder to fall or stay asleep. Your body temperature may also make it harder for you to catch those much needed Zzz\'s.\n
        \nCore body temperature rises about half a degree after ovulation and stays high until you start to menstruate or shortly after. That may not sound like much, but cooler body temps are associated with better sleep. That half a degree can impair your ability to rest and renew.</string>
    <string name="title4"><b>The Most Common Signs Of Menstruation Before 1 Week</b></string>
    <string name="body4"><b>&#160;&#160;&#160;&#160;&#160;&#160;1. The air is broken out much</b>\n\nSigns of menstruation before the first week is the phenomenon of the body emitting a lot of discharge. Because when the \"day\" is near, the girl\'s estrogen hormone will increase more than usual – resulting in more vaginal discharge and the \"girl\" becoming more moist. But girls need to pay attention: if signs of unpleasant odors, strange colored discharge or vaginal itching occur at the same time … girls will need to see a doctor because there is a risk of gynecological infection.\n
        \nReference: More white blood is about to menstruate.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;2. Oily skin, acne</b>\n
        \nThe skin produces a lot of sebum, acne is also one of the most common signs of menstruation before 1 week in girls. It is also because hormone levels rise when the period is approaching, which stimulates sebum production and clog pores – causing breakouts when preparing to menstruate. Girls do not forget to wash your face and clean hygiene to limit this situation \"unpleasant\" okay!\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;3. The first round is tight</b>\n
        \nIf your breasts become tense or you feel an increase in size in the first round, don\'t be surprised, it\'s just that girls are experiencing signs of menstruation before a typical week in women. The increase in estrogen hormone makes the breast tissue erect, girls will feel slightly swollen nipples and spread to the surrounding areas. Note to wear a little loose bra to round 1 more comfortable on \"that day\" my daughter.\n
        \nReference: Chest pain for how long menstruation.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;4. Lower abdominal pain, back pain</b>\n\n
        Lower abdominal pain is also a common symptom 1 week before menstruation, especially often appearing 1 to 2 days before the \"strawberry season\". Due to the increased secretion of female sex hormones, it can cause spasms and lower abdominal pain, which can also cause back pain.\n
        \nReference: Dysmenorrhea but no bleeding.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;5. Digestive disorders</b>\n
        \nIn addition to lower abdominal pain, girls are also more likely to experience other signs of menstruation before 1 week of digestion, such as bloating, bloating, nausea, food cravings, even diarrhea or constipation.\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;6. Tired but having trouble sleeping</b>\n
        \nGirls who are about to menstruate will often experience fatigue, but the lack of tryptophan before \"falling out of the strawberry\" can lead to insomnia. It is uncomfortable to experience signs of menstruation before 1 week, right daughter?\n
        \n<b>&#160;&#160;&#160;&#160;&#160;&#160;7. Mood swings</b>\n
        \nIt will be easy for women to understand, when having the signs of menstruation before 1 week of discomfort, the mood will easily become sensitive, easy to get angry, upset, moody, depressed.\n
        \nIf you experience this discomfort, girls try to spend more time on themselves, eat well and participate in exercise, yoga … to regain balance and help the mood better!</string>
    <string name="title5"><b>Expression Of Menstrual Disorders</b></string>
    <string name="body5">Menstrual irregularities are not always a sign of a health problem. However, you should still pay attention when you encounter some of the following abnormal symptoms of menstrual disorders.\n
        \n<b>Menstrual irregularities:</b> When your period is longer than 35 days (menstrual period) or shorter than 22 days (menstrual cycle), even if you don\'t have periods for 6 months or more (amenorrhea).\n
        \n<b>Menstrual abnormalities:</b> These are abnormalities in the amount and day of menstruation.\n
        \n<b>Menopause:</b> also called menstrual tape, blood flow &gt;20ml / period.\n
        \n<b>Amenorrhea:</b> the number of menstrual days &lt; 2 days and the amount of periods &lt; 20ml/ period.\n
        \n<b>Dysmenorrhea:</b> number of menstrual periods &gt; 7 days.\n
        \n<b>Menstrual color:</b> Usually blood red, smells a little fishy,​not clotting, if menstrual blood mixed with blood or bright red or pink blood is abnormal.\n
        \nAbnormal symptoms associated with the next menstrual period: In the menstrual irregularities, dysmenorrhea is the most common phenomenon, often with symptoms of lower abdominal pain when menstruation. If the pain is painful, the pain may spread through the spine, spread to the thighs and spread to the whole abdomen. In addition, you may see back pain accompanied by chest tightness, breast tenderness, nausea, being emotional, affecting living and working.\n</string>
    <string name="moods">Moods</string>
    <string name="symptoms">Symptoms</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="ovulation">Ovulation</string>
</resources>