<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Step 2 out of 4"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:src="@drawable/step2" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/what_s_your_typical_period_length"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:text="Days"
                android:background="@color/light_violet"
                android:textStyle="bold"
                android:textColor="@color/violet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="@dimen/_80sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"/>
            <NumberPicker
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/numberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:descendantFocusability="blocksDescendants"
                android:theme="@style/NumberPickerTheme" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/txtNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/day_5"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCheckBox"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="@string/not_sure"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_button"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/llCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>