<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/violet"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back_w"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="@color/color_bg"
        android:padding="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/topBar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="@dimen/_2sdp"
            android:background="@drawable/shape_log"
            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMoods"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/moods"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/txtMoods"
                android:id="@+id/rcvMotion"
                android:padding="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="@dimen/_2sdp"
            android:background="@drawable/shape_log"
            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtSymptom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/symptoms"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/txtSymptom"
                android:id="@+id/rcvSymptom"
                android:padding="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="@dimen/_2sdp"
            android:background="@drawable/shape_log"
            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtPhysic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/physical_activity"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/txtPhysic"
                android:id="@+id/rcvPhysic"
                android:padding="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="@dimen/_2sdp"
            android:background="@drawable/shape_log"
            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtOvulation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/ovulation"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/txtOvulation"
                android:id="@+id/rcvOvulation"
                android:padding="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/shape_bg_button"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>